Fixing overflow issues on mobile

--- a/src/assets/styles/utility/_image-utilities.scss
+++ b/src/assets/styles/utility/_image-utilities.scss
@@ -1,3 +1,8 @@
+.contain-image-width {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 .page-width-image {
   max-width: unset;
   width: 120vw;
